--- a/ToDoFinalApp/Localizable.strings
+++ b/ToDoFinalApp/Localizable.strings
@@ -7,7 +7,7 @@
 */
 
 
-"Delete Goal?" = "目標を削除しますか";
+//"Delete Goal?" = "目標を削除しますか";
 //"Cancel" = "キャンセル";
 //"Your Tasks Will Appear Here" = "あなたの仕事はここに現れるでしょう";
 //"Select Goal To Add New Tasks" = "新しいタスクを追加するための目標の選択";
