--- a/ja.lproj/Localizable.strings
+++ b/ja.lproj/Localizable.strings
@@ -7,10 +7,10 @@
 */
 
 
-//"Delete Goal?" = "目標を削除しますか"
-//"This will remove your goal and tasks." = "これはあなたの目標と仕事を取り除くでしょう";
-//"Cancel" = キャンセル
-//"Your Tasks Will Appear Here" = "あなたのタスクはここに表示されます";
-//"Select Goal To Add New Tasks" = "新しいタスクを追加するための目標の選択";
-//"to complete"
-//"All Tasks Completed"
+"Delete Goal?" = "目標を削除しますか";
+"This will remove your goal and tasks." = "これはあなたの目標と仕事を取り除くでしょう";
+"Cancel" = "キャンセル";
+"Your Tasks Will Appear Here" = "あなたのタスクはここに表示されます";
+"Select Goal To Add New Tasks" = "新しいタスクを追加するための目標の選択";
+"to complete" = "完了する";
+"All Tasks Completed" = "完了したすべてのタスク";
