Has no widget. Going to add the ads portion to project
Fixed localization, before adding google ads.

--- a/ToDoFinalApp/ja.lproj/Localization.strings
+++ b/ToDoFinalApp/ja.lproj/Localization.strings
@@ -1,9 +1,9 @@
 /* 
-  Localizable.strings
-  
+  Localization.strings
+  ToDoFinalApp
 
-  Created by Jackie Norstrom on 1/22/19.
-  
+  Created by Jackie Norstrom on 1/25/19.
+  Copyright © 2019 LAS. All rights reserved.
 */
 
 
