--- a/ToDoFinalApp/en.lproj/Localization.strings
+++ b/ToDoFinalApp/en.lproj/Localization.strings
@@ -1,11 +1,10 @@
 /* 
-  Localizable.strings
-  
+  Localization.strings
+  ToDoFinalApp
 
-  Created by Jackie Norstrom on 1/22/19.
-  
+  Created by Jackie Norstrom on 1/25/19.
+  Copyright © 2019 LAS. All rights reserved.
 */
-//This is base. English goes here.
 
 
 "Delete Goal?" = "Delete Goal?";
